# PoliceCatchThief

./: CMakeLists.txt  README.md
data/: words_easy.txt  words_hard.txt  words_medium.txt
include/: Character.h  GameObject.h  Thief.h  TypingManager.h
note/: sfml.md
src/: Character.cpp  Character.h  Difficulty.h  Game.cpp  Game.h  GameObject.h  Police.cpp  Police.h  Route.cpp  Route.h  Thief.cpp  Thief.h  TypingManager.cpp  main.cpp
